# Epitech-All-Projects

./: README.md
Tek1/: README.md
Tek1/CPool Part1/: README.md
Tek1/CPool Part1/Day01/: mr_clean  prepare_my_repo.sh  push_that.sh
Tek1/CPool Part1/Day02/: count_files.sh  gotta_catch_them_all.sh  how_many_are_we.sh  looneytised.sh  r_tacpy.sh  skip.sh
Tek1/CPool Part1/Day03/: my_isneg.c  my_print_alpha.c  my_print_comb.c  my_print_comb2.c  my_print_digits.c  my_print_revalpha.c  my_put_nbr.c
Tek1/CPool Part1/Day04/: a.out  my_evil_str.c
Tek1/CPool Part1/Day05/: my_compute_factorial_it.c  my_compute_factorial_rec.c  my_compute_power_it.c
Tek1/CPool Part1/Day06/: my_str_isprintable.c  my_strcmp.c  my_strlowcase.c  my_strncmp.c  my_strncmp.gcda  my_strncmp.gcno  my_strncpy.c  my_strupcase.c
Tek1/CPool Part1/Day08/: concat_params.c
Tek1/CPool Part1/Day09/: my_params_to_array.c  my_show_param_array.c
Tek1/CPool Part1/Day11/: my_list_size.c  my_params_to_list.c  my_putchar.c
Tek1/CPool Part1/Day13/: my_first_screen.c
Tek1/CPool Part1/FirTree/: tree.c
Tek1/CPool Part1/Match Nmatch/: match.c  nmatch.c
Tek1/CPool Part2/: README.md
Tek1/CPool Part2/Bistro Matic/: Makefile  check_existing_charac.c  display_help.c  eval_expr_bistro.c  main.c  multi_check.c  my_atoi.c
Tek1/CPool Part2/Evalexpr/: Makefile  eval_expr.c  main.c
Tek1/CPool Part2/Infin Add/: Makefile  main.c  my_putstr_errors.c  my_str_isnum.c
Tek1/Elementary Programming in C (CPE)/BSQ/: Makefile  README.md  bsq  bsq_find_biggest_square.c  bsq_reader.c  calc.c  main.c  main_bsq.c  my_print_map.c  my_revstr.c
Tek1/Graphic/My Runner/: map  (+5 more)
Tek1/Introduction to AI/: README.md
Tek2/: README.md
Tek2/CPP Pool/: README.md
Tek2/Plazza/: .gitignore  Makefile  README.md
Tek3/: README.md
Tek3/Advanced C++/Babel/: .gitignore  CMakeLists.txt  README.md  babel.db  cmake_install.cmake  conanfile.txt  recorded.raw  unix_compiler.sh  unix_setup.sh
Tek3/Advanced C++/Babel/cmake/: FindPortaudio.cmake
Tek3/Advanced C++/Babel/documentation/: Client_UML.drawio  Server_UML.drawio  protocol.drawio
Tek3/Advanced C++/Babel/include/client/: AClient.hpp  Client.hpp  IClient.hpp  pa_asio.h
Tek3/Advanced C++/Babel/include/client/contacts/: contactList.hpp
Tek3/Advanced C++/Babel/include/commons/: Connection.hpp  Package.hpp  TsQueue.hpp  common.h  exceptions.hpp  ownedPackage.hpp  users.hpp
Tek3/Advanced C++/Babel/include/server/: AServer.hpp  IServer.hpp  Server.hpp
Tek3/Advanced C++/Babel/include/server/database/: database.hpp
Tek3/Advanced C++/Babel/include/server/network/: network.hpp
Tek3/Advanced C++/Babel/src/client/: AClient.cpp  Client.cpp  list_all_devices.cpp  main.cpp
Tek3/Advanced C++/Babel/src/client/contacts/: contactList.cpp
Tek3/Advanced C++/Babel/src/client/ui/: AWindowManager.hpp  CallPopUp.cpp  CallPopUp.hpp  CallWindow.cpp  CallWindow.hpp  LoginWindow.cpp  LoginWindow.hpp  MainWindow.cpp  MainWindow.hpp  MessageWindow.cpp  MessageWindow.hpp  RegisterWindow.cpp  RegisterWindow.hpp  Sound.cpp  Sound.hpp  WindowManager.cpp  WindowManager.hpp  WindowTemplates.cpp  WindowTemplates.hpp
Tek3/Advanced C++/Babel/src/commons/: Connection.cpp  exceptions.cpp  users.cpp
Tek3/Advanced C++/Babel/src/server/: AServer.cpp  Server.cpp  examplebdd.cpp2  main.cpp
Tek3/Advanced C++/Babel/src/server/database/: database.cpp
Tek3/Advanced C++/Babel/src/server/network/: network.cpp
(+2199 files in other folders)
